data/derived/fa15/progs/unify/prog1949.ml.out
Characters 68-97:
  else bigAdd l, mulByDigit( i-1, l);;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int
